// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ModalDialog matches snapshot (closed) 1`] = `
.c0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

<body
  class=""
  style="overflow: unset;"
>
  <div />
  <div
    class="c0"
    data-testid="toasts"
  />
  <div
    class="ReactModalPortal"
  />
</body>
`;

exports[`ModalDialog matches snapshot (custom button labels) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-1halfx);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  min-width: var(--size-1halfx);
  padding: 0;
  width: var(--size-1halfx);
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c6 {
  color: #1B1C1E;
  font-size: 1.25rem;
  font-weight: var(--font-semi-bold);
  line-height: 2rem;
  margin: 0;
}

.c8 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
  margin: 0;
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgb(0 0 0 / 10%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 95vw;
  min-height: 1vh;
  min-width: calc(480px - var(--spacing-4x));
  position: relative;
  width: 60vw;
}

.c1::after {
  content: '';
  display: block;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--spacing-2x);
  max-height: 100%;
  overflow-y: auto;
  padding: var(--spacing-3x) var(--spacing-4x);
  padding-top: 0;
  padding-bottom: 0;
}

.c5 {
  border-bottom: 1px solid transparent;
  padding: var(--spacing-3x) var(--spacing-4x);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-right: calc(var(--spacing-4x) + var(--spacing-3x));
}

.c9 {
  border-top: 1px solid transparent;
  padding: var(--spacing-4x) var(--spacing-4x);
}

.c4 {
  pointer-events: none;
  position: absolute;
  right: var(--spacing-4x);
  top: var(--spacing-3x);
}

.c4 > * {
  pointer-events: auto;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  gap: var(--spacing-1x);
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    class="c0"
    data-testid="toasts"
  />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-labelledby="uuid1"
        aria-modal="true"
        class="ReactModal__Content c1"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close dialog"
          class="c2 c3 c4"
          data-testid="close-button"
          type="button"
        >
          <svg
            data-name="x"
            data-testid="icon"
          />
        </button>
        <header
          class="c5"
        >
          <h2
            class="c6"
            id="uuid1"
          >
            Title
          </h2>
        </header>
        <main
          class="c7"
        >
          <h3
            class="c8"
          >
            Subtitle
          </h3>
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
        <footer
          class="c9"
        >
          <div
            class="c10"
          >
            <button
              data-button-type="tertiary"
              data-testid="cancel-button"
              type="button"
            >
              Test Cancel
            </button>
            <button
              data-button-type="primary"
              data-testid="confirm-button"
              type="button"
            >
              Test Confirm
            </button>
          </div>
        </footer>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalDialog matches snapshot (custom footer content) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-1halfx);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  min-width: var(--size-1halfx);
  padding: 0;
  width: var(--size-1halfx);
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c6 {
  color: #1B1C1E;
  font-size: 1.25rem;
  font-weight: var(--font-semi-bold);
  line-height: 2rem;
  margin: 0;
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgb(0 0 0 / 10%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 95vw;
  min-height: 1vh;
  min-width: calc(480px - var(--spacing-4x));
  position: relative;
  width: 60vw;
}

.c1::after {
  content: '';
  display: block;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--spacing-2x);
  max-height: 100%;
  overflow-y: auto;
  padding: var(--spacing-3x) var(--spacing-4x);
  padding-top: 0;
  padding-bottom: 0;
}

.c5 {
  border-bottom: 1px solid transparent;
  padding: var(--spacing-3x) var(--spacing-4x);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-right: calc(var(--spacing-4x) + var(--spacing-3x));
}

.c8 {
  border-top: 1px solid transparent;
  padding: var(--spacing-4x) var(--spacing-4x);
}

.c4 {
  pointer-events: none;
  position: absolute;
  right: var(--spacing-4x);
  top: var(--spacing-3x);
}

.c4 > * {
  pointer-events: auto;
}

<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    class="c0"
    data-testid="toasts"
  />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-labelledby="uuid1"
        aria-modal="true"
        class="ReactModal__Content c1"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close dialog"
          class="c2 c3 c4"
          data-testid="close-button"
          type="button"
        >
          <svg
            data-name="x"
            data-testid="icon"
          />
        </button>
        <header
          class="c5"
        >
          <h2
            class="c6"
            id="uuid1"
          >
            Title
          </h2>
        </header>
        <main
          class="c7"
        >
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
        <footer
          class="c8"
        >
          <p>
            Custom content
          </p>
        </footer>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalDialog matches snapshot (only subtitle) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-1halfx);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  min-width: var(--size-1halfx);
  padding: 0;
  width: var(--size-1halfx);
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c6 {
  color: #1B1C1E;
  font-size: 1.25rem;
  font-weight: var(--font-semi-bold);
  line-height: 2rem;
  margin: 0;
}

.c8 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
  margin: 0;
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgb(0 0 0 / 10%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 95vw;
  min-height: 1vh;
  min-width: calc(480px - var(--spacing-4x));
  position: relative;
  width: 60vw;
}

.c1::after {
  content: '';
  display: block;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--spacing-2x);
  max-height: 100%;
  overflow-y: auto;
  padding: var(--spacing-3x) var(--spacing-4x);
  padding-top: 0;
  padding-bottom: 0;
}

.c5 {
  border-bottom: 1px solid transparent;
  padding: var(--spacing-3x) var(--spacing-4x);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-right: calc(var(--spacing-4x) + var(--spacing-3x));
}

.c9 {
  border-top: 1px solid transparent;
  padding: var(--spacing-4x) var(--spacing-4x);
}

.c4 {
  pointer-events: none;
  position: absolute;
  right: var(--spacing-4x);
  top: var(--spacing-3x);
}

.c4 > * {
  pointer-events: auto;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  gap: var(--spacing-1x);
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    class="c0"
    data-testid="toasts"
  />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-labelledby="uuid1"
        aria-modal="true"
        class="ReactModal__Content c1"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close dialog"
          class="c2 c3 c4"
          data-testid="close-button"
          type="button"
        >
          <svg
            data-name="x"
            data-testid="icon"
          />
        </button>
        <header
          class="c5"
        >
          <h2
            class="c6"
            id="uuid1"
          >
            Title
          </h2>
        </header>
        <main
          class="c7"
        >
          <h3
            class="c8"
          >
            Subtitle
          </h3>
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
        <footer
          class="c9"
        >
          <div
            class="c10"
          >
            <button
              data-button-type="tertiary"
              data-testid="cancel-button"
              type="button"
            >
              Cancel
            </button>
            <button
              data-button-type="primary"
              data-testid="confirm-button"
              type="button"
            >
              Confirm
            </button>
          </div>
        </footer>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalDialog matches snapshot (opened, desktop) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-1halfx);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  min-width: var(--size-1halfx);
  padding: 0;
  width: var(--size-1halfx);
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c6 {
  color: #1B1C1E;
  font-size: 1.25rem;
  font-weight: var(--font-semi-bold);
  line-height: 2rem;
  margin: 0;
}

.c8 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
  margin: 0;
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgb(0 0 0 / 10%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 95vw;
  min-height: 1vh;
  min-width: calc(480px - var(--spacing-4x));
  position: relative;
  width: 60vw;
}

.c1::after {
  content: '';
  display: block;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--spacing-2x);
  max-height: 100%;
  overflow-y: auto;
  padding: var(--spacing-3x) var(--spacing-4x);
  padding-top: 0;
  padding-bottom: 0;
}

.c5 {
  border-bottom: 1px solid transparent;
  padding: var(--spacing-3x) var(--spacing-4x);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-right: calc(var(--spacing-4x) + var(--spacing-3x));
}

.c9 {
  border-top: 1px solid transparent;
  padding: var(--spacing-4x) var(--spacing-4x);
}

.c4 {
  pointer-events: none;
  position: absolute;
  right: var(--spacing-4x);
  top: var(--spacing-3x);
}

.c4 > * {
  pointer-events: auto;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  gap: var(--spacing-1x);
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    class="c0"
    data-testid="toasts"
  />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-labelledby="uuid1"
        aria-modal="true"
        class="ReactModal__Content c1"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close dialog"
          class="c2 c3 c4"
          data-testid="close-button"
          type="button"
        >
          <svg
            data-name="x"
            data-testid="icon"
          />
        </button>
        <header
          class="c5"
        >
          <h2
            class="c6"
            id="uuid1"
          >
            Title
          </h2>
        </header>
        <main
          class="c7"
        >
          <h3
            class="c8"
          >
            Subtitle
          </h3>
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
        <footer
          class="c9"
        >
          <div
            class="c10"
          >
            <button
              data-button-type="tertiary"
              data-testid="cancel-button"
              type="button"
            >
              Cancel
            </button>
            <button
              data-button-type="primary"
              data-testid="confirm-button"
              type="button"
            >
              Confirm
            </button>
          </div>
        </footer>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalDialog matches snapshot (opened, mobile) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c6 {
  color: #1B1C1E;
  font-size: 1.25rem;
  font-weight: var(--font-semi-bold);
  line-height: 2rem;
  margin: 0;
}

.c8 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
  margin: 0;
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: 0;
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgb(0 0 0 / 10%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 95vw;
  min-height: 1vh;
  min-width: initial;
  position: relative;
  width: calc(100vw - var(--spacing-2x));
}

.c1::after {
  content: '';
  display: block;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--spacing-2x);
  max-height: 100%;
  overflow-y: auto;
  padding: var(--spacing-2x) var(--spacing-2x);
  padding-top: 0;
  padding-bottom: 0;
}

.c5 {
  border-bottom: 1px solid transparent;
  padding: var(--spacing-2x) var(--spacing-2x);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-right: calc(var(--spacing-2x) + var(--spacing-3x));
}

.c9 {
  border-top: 1px solid transparent;
  padding: var(--spacing-4x) var(--spacing-2x);
}

.c4 {
  pointer-events: none;
  position: absolute;
  right: var(--spacing-2x);
  top: var(--spacing-2x);
}

.c4 > * {
  pointer-events: auto;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--spacing-1x);
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    class="c0"
    data-testid="toasts"
  />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-labelledby="uuid1"
        aria-modal="true"
        class="ReactModal__Content c1"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close dialog"
          class="c2 c3 c4"
          data-testid="close-button"
          type="button"
        >
          <svg
            data-name="x"
            data-testid="icon"
          />
        </button>
        <header
          class="c5"
        >
          <h2
            class="c6"
            id="uuid1"
          >
            Title
          </h2>
        </header>
        <main
          class="c7"
        >
          <h3
            class="c8"
          >
            Subtitle
          </h3>
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
        <footer
          class="c9"
        >
          <div
            class="c10"
          >
            <button
              data-button-type="tertiary"
              data-testid="cancel-button"
              type="button"
            >
              Cancel
            </button>
            <button
              data-button-type="primary"
              data-testid="confirm-button"
              type="button"
            >
              Confirm
            </button>
          </div>
        </footer>
      </div>
    </div>
  </div>
</body>
`;
